--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,10 @@
 {
-  "name": "React PWA",
+  "name": "React+PWA",
   "short_name": "reactpwa",
   "description": "Starter kit for modern web applications",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "icons": [
     {
