--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "https-preview": "serve dist",
-    "prepare": "husky install && cp -n env/.shared .env &",
     "prettier:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "lint:check": "eslint --max-warnings=0 \"src/**/*.{js,jsx,ts,tsx,json}\"",
     "ts:check": "tsc --noEmit",
@@ -31,6 +30,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
+    "@mui/system": "^7.3.1",
+    "@mui/utils": "^7.3.1",
     "@toolpad/core": "^0.12.1",
     "jotai": "^2.12.1",
     "react": "^19.0.0",
