--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
+  "display_override": ["window-controls-overlay"],
   "theme_color": "#ffffff",
   "icons": [
     {
