--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-error-boundary": "^5.0.0",
     "react-hotkeys-hook": "^4.6.1",
     "react-router": "^7.2.0",
-    "usehooks-ts": "^3.1.1"
+    "usehooks-ts": "^3.1.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -63,6 +64,7 @@
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
     "vite-plugin-pwa": "^0.21.1",
+    "vite-plugin-svgr": "^4.5.0",
     "vitest": "^3.0.7"
   },
   "lint-staged": {
