--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint:check": "eslint --max-warnings=0 \"src/**/*.{js,jsx,ts,tsx,json}\"",
     "lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "ts:check": "tsc --noEmit",
+    "tsc": "tsc -b",
     "test:unit": "vitest src",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui"
